@@ -1,5 +1,7 @@
 *SVN*
 
+* Enable application/x-yaml processing by default [Jamis Buck]
+
 * Fix double url escaping of remote_function. Add :escape => false option to ActionView's url_for. [Nicholas Seckar]
 
 * Add :script option to in_place_editor to support evalScripts (closes #4194) [codyfauser@gmail.com]
